<resources>
    <string name="app_name">Fake</string>
    <string name="image">Ajeenkya Logo</string>
    <string name="URN">URN No.:-  </string>
    <string name="PASS">Password:-</string>
    <string name="urn">Enter URN No.</string>
    <string name="pass">Enter Password</string>
    <string name="Login_Button">Login</string>
    <string name="Issue">Select Issues</string>
    <string name="IssuePage">State Your Issues</string>
    <string name="Subject">Subject Related</string>
    <string name="Report">Report Faculty</string>
    <string name="Student">Students Related</string>
    <string name="ERP">ERP Related</string>
    <string name="back">Back</string>
    <string name="Submit">Submit</string>
    <string name="Forget">Forget Your Password ?</string>
</resources>